argocd/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: cloudflare-tunnel
    ports:
    - port: 8080
